<resources>
    <string name="app_name">FITECH</string>
    <string name="label_email">Email</string>
    <string name="label_senha">Senha</string>
    <string name="underlined_forget_you_password"><u>Esqueceu sua senha?</u></string>
    <string name="button_entrar">ENTRAR</string>
    <string name="label_ou">OU</string>
    <string name="button_cadastrar">CADASTRAR</string>
    <string name="check_box_termos">Concordo com os termos e serviços.</string>
    <string name="check_box_notEnov">Quero receber noticias e promoções do aplicativo no meu email.</string>
    <string name="button_registrar">REGISTRAR</string>
    <string name="label_calculadoraIMC">Calculadora IMC</string>
    <string name="button_ACESSAR">ACESSAR</string>
    <string name="label_listaDeExercicio">Lista de Exercícios</string>
    <string name="label_calculoDeCalorias">Calculadora De Calorias Diárias</string>
    <string name="label_sobreOApp">Sobre o app</string>
    <string name="popup_sair">Sair</string>
    <string name="popup_MinhaConta">Minha Conta</string>
    <string name="IMC_title">IMC</string>
    <string name="TMB_title">TMB</string>
    <string name="Peso_PlaceHolder">Peso (Kg)</string>
    <string name="idade_PlaceHolder">Idade (Anos)</string>
    <string name="Altura_PlaceHolder">Altura (Cm)</string>
    <string name="text_button_Calcular">Calcular</string>
    <string name="label_container_calcular">Resultado</string>
    <string name="button_Calculos_Anteriores">Calculos Anteriores</string>
    <string name="ListaDeExercicios_title">Lista de exercícios</string>
    <string name="NomeRegiaoExercicio">Região do Exercicio</string>
    <string name="nomeExercicio">Nome do Exercicio</string>
    <string name="dificuldadeExercicio">Dificuldade do Exercicio</string>
    <string name="finalidadeExercicio">Finalidade do Exercicio</string>
    <string name="descricaoExercicio">Descrição do Exercicio</string>
    <string name="esqueceu_sua_senha_desc">Esqueceu sua senha?\nInsira seu e-mail para receber as instruções\n de redefinição de senha no seu email</string>
    <string name="esqueceu_sua_senha_button">Redefinir Senha</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="title_SobreOApp">Sobre o App</string>
    <string name="descSobreoApp">Aplicativo de atividade física para fins de acadêmicos, desenvolvido por alunos do curso de Análise e Desenvolvimento de Sistemas da Universidade Católica de Brasília.</string>

</resources>