<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.formlogin.FormLoginActivity">

    <TextView
        android:id="@+id/tvFITECH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/khand_bold"
        android:text="@string/app_name"
        android:textSize="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_1"
        android:layout_width="68dp"
        android:layout_height="2dp"
        android:layout_marginLeft="-70dp"
        android:layout_marginTop="-18dp"
        android:background="@drawable/line_1"
        app:layout_constraintStart_toEndOf="@id/tvFITECH"
        app:layout_constraintTop_toBottomOf="@+id/tvFITECH" />

    <TextView
        android:id="@+id/tvLabelEmailLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/khand_light"
        android:text="@string/label_email"
        android:textColor="@color/dark_grey"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@id/etInputEmailLogin"
        app:layout_constraintStart_toStartOf="@id/etInputEmailLogin" />


    <EditText
        android:id="@+id/etInputEmailLogin"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:layout_marginTop="130dp"
        android:paddingLeft="10dp"
        android:background="#D9D9D9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFITECH" />

    <TextView
        android:id="@+id/tvLabelSenhaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/khand_light"
        android:text="@string/label_senha"
        android:textColor="@color/dark_grey"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@id/etInputSenhaLogin"
        app:layout_constraintStart_toStartOf="@id/etInputSenhaLogin" />

    <EditText
        android:id="@+id/etInputSenhaLogin"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:layout_marginTop="85dp"
        android:paddingLeft="10dp"
        android:background="#D9D9D9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etInputEmailLogin" />

    <TextView
        android:id="@+id/tvLabelEsqueceuSuaSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/khand_light"
        android:text="@string/underlined_forget_you_password"
        android:textColor="@color/dark_grey"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@id/etInputSenhaLogin"
        app:layout_constraintTop_toBottomOf="@id/etInputSenhaLogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btEntrarLogin"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/btn1"
        android:fontFamily="@font/khand_light"
        android:text="@string/button_entrar"
        android:textFontWeight="1000"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelEsqueceuSuaSenha" />

    <TextView
        android:id="@+id/tvLabelOU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/khand_light"
        android:text="@string/label_ou"
        android:textColor="#A4A0A0"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btEntrarLogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCadastrarLogin"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn2"
        android:fontFamily="@font/khand_light"
        android:text="@string/button_cadastrar"
        android:textFontWeight="1000"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelOU" />

</androidx.constraintlayout.widget.ConstraintLayout>