<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.formcadastro.FormCadastroActivity">

    <TextView
        android:id="@+id/tvFITECH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/khand_bold"
        android:text="@string/app_name"
        android:textSize="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_1"
        android:layout_width="68dp"
        android:layout_height="2dp"
        android:layout_marginLeft="-70dp"
        android:layout_marginTop="-18dp"
        android:background="@drawable/line_1"
        app:layout_constraintStart_toEndOf="@id/tvFITECH"
        app:layout_constraintTop_toBottomOf="@+id/tvFITECH" />

    <TextView
        android:id="@+id/tvLabelEmailCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/khand_light"
        android:text="@string/label_email"
        android:textColor="@color/dark_grey"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@id/etInputEmailCadastro"
        app:layout_constraintStart_toStartOf="@id/etInputEmailCadastro" />


    <EditText
        android:id="@+id/etInputEmailCadastro"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_marginTop="130dp"
        android:paddingLeft="10dp"
        android:background="#D9D9D9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFITECH" />

    <TextView
        android:id="@+id/tvLabelSenhaCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/khand_light"
        android:text="@string/label_senha"
        android:textColor="@color/dark_grey"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@id/etInputSenhaCadastro"
        app:layout_constraintStart_toStartOf="@id/etInputSenhaCadastro" />

    <EditText
        android:id="@+id/etInputSenhaCadastro"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginTop="85dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:background="#D9D9D9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etInputEmailCadastro" />

    <CheckBox
        android:id="@+id/cbTermos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/etInputSenhaCadastro"
        app:layout_constraintTop_toBottomOf="@id/etInputSenhaCadastro"
        android:layout_marginTop="20dp"
        android:text="@string/check_box_termos"
        android:drawableLeft="@drawable/checkbox_custom"
        android:fontFamily="@font/khand_light"
        android:textFontWeight="1000"
        android:textColor="@color/dark_grey"
        android:button="@null" />

    <CheckBox
        android:id="@+id/cbQueroReceberNov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/etInputSenhaCadastro"
        app:layout_constraintTop_toBottomOf="@id/cbTermos"
        android:layout_marginTop="8dp"
        android:text="@string/check_box_notEnov"
        android:drawableLeft="@drawable/checkbox_custom"
        android:fontFamily="@font/khand_light"
        android:textFontWeight="1000"
        android:textColor="@color/dark_grey"
        android:button="@null" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCadastrarCadastro"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/btn1"
        android:fontFamily="@font/khand_light"
        android:text="@string/button_registrar"
        android:textFontWeight="1000"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbQueroReceberNov" />
</androidx.constraintlayout.widget.ConstraintLayout>