<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.formesqueceusuasenha.FormEsqueceuSuaSenhaActivity">

    <TextView
        android:id="@+id/tvFITECH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/khand_bold"
        android:text="@string/app_name"
        android:textSize="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_1"
        android:layout_width="68dp"
        android:layout_height="2dp"
        android:layout_marginLeft="-70dp"
        android:layout_marginTop="-18dp"
        android:background="@drawable/line_1"
        app:layout_constraintStart_toEndOf="@id/tvFITECH"
        app:layout_constraintTop_toBottomOf="@+id/tvFITECH" />

    <TextView
        android:id="@+id/descEsqueceuSuaSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFITECH"
        android:text="@string/esqueceu_sua_senha_desc"
        android:textAlignment="center"
        android:fontFamily="@font/khand_medium"
        android:layout_marginTop="90dp"
        />

    <TextView
        android:id="@+id/tvLabelEmailEsqueceuASenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/khand_light"
        android:text="@string/label_email"
        android:textColor="@color/dark_grey"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@id/etInputEmailEsqueceuASenha"
        app:layout_constraintStart_toStartOf="@id/etInputEmailEsqueceuASenha" />


    <EditText
        android:id="@+id/etInputEmailEsqueceuASenha"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_marginTop="70dp"
        android:paddingLeft="10dp"
        android:background="#D9D9D9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descEsqueceuSuaSenha"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btEsqueceuASenha"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/btn1"
        android:fontFamily="@font/khand_light"
        android:text="@string/esqueceu_sua_senha_button"
        android:textFontWeight="1000"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etInputEmailEsqueceuASenha" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCancelar"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn1"
        android:fontFamily="@font/khand_light"
        android:text="@string/button_cancelar"
        android:textFontWeight="1000"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btEsqueceuASenha" />


</androidx.constraintlayout.widget.ConstraintLayout>