<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@drawable/btn2">

        <ImageView
            android:id="@+id/imageExercicio"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/ic_launcher"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            >

            <TextView
                android:id="@+id/TextViewNomeDoExercicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomeExercicio"
                android:fontFamily="@font/khand_medium"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/TextViewFinalidadeExercicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finalidadeExercicio"
                android:fontFamily="@font/khand_medium"
                android:textSize="15dp"
                />

            <TextView
                android:id="@+id/TextViewDificuldadeExercicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dificuldadeExercicio"
                android:fontFamily="@font/khand_medium"
                android:textSize="12dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>