<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.telaprincipal.TelaPrincipal">

    <View
        android:id="@+id/frameHeaderPP"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/btn1"/>

    <TextView
        android:id="@+id/logoFITECH_PP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/khand_bold"
        android:text="@string/app_name"
        android:textSize="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_1"
        android:layout_width="68dp"
        android:layout_height="2dp"
        android:layout_marginLeft="-70dp"
        android:layout_marginTop="-18dp"
        android:background="@drawable/line_1"
        app:layout_constraintStart_toEndOf="@id/logoFITECH_PP"
        app:layout_constraintTop_toBottomOf="@+id/logoFITECH_PP" />

    <View
        android:id="@+id/iconCalcularIMC"
        android:layout_width="25dp"
        android:layout_height="31.25dp"
        android:background="@drawable/icon_calcularimc"
        app:layout_constraintTop_toBottomOf="@id/frameHeaderPP"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="33dp"/>

    <TextView
        android:id="@+id/labelCacularIMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/iconCalcularIMC"
        app:layout_constraintTop_toTopOf="@id/iconCalcularIMC"
        app:layout_constraintStart_toEndOf="@id/iconCalcularIMC"
        android:layout_marginLeft="12dp"
        android:fontFamily="@font/khand_medium"
        android:text="@string/label_calculadoraIMC"
        android:textSize="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_calculadoraIMC"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@drawable/btn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/iconCalcularIMC"
        app:layout_constraintTop_toTopOf="@id/iconCalcularIMC"
        android:layout_marginRight="15dp"
        android:text="@string/button_ACESSAR"
        android:textSize="20dp"
        android:fontFamily="@font/khand_medium"
        />

    <View
        android:id="@+id/divider_1"
        android:layout_width="370dp"
        android:layout_height="1dp"
        android:background="@drawable/line_1"
        app:layout_constraintTop_toBottomOf="@id/button_calculadoraIMC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
         />


</androidx.constraintlayout.widget.ConstraintLayout>