<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.sobreoapp.SobreOApp">

    <!-- Frame Header e Logo -->

    <View
        android:id="@+id/frameHeaderSobreOApp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/btn1" />

    <TextView
        android:id="@+id/logoFITECH_SobreOApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/khand_bold"
        android:text="@string/app_name"
        android:textSize="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_1"
        android:layout_width="68dp"
        android:layout_height="2dp"
        android:layout_marginLeft="-70dp"
        android:layout_marginTop="-18dp"
        android:background="@drawable/line_1"
        app:layout_constraintStart_toEndOf="@id/logoFITECH_SobreOApp"
        app:layout_constraintTop_toBottomOf="@+id/logoFITECH_SobreOApp" />

    <!-- Botao Voltar -->

    <View
        android:id="@+id/iconButtonVoltarTelaSobreOApp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/backwards_arrow"
        app:layout_constraintStart_toStartOf="@id/frameHeaderSobreOApp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/frameHeaderSobreOApp"
        android:layout_marginLeft="10dp"
        />

    <!-- Titulo -->

    <TextView
        android:id="@+id/titleSobreOApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_SobreOApp"
        android:textSize="45dp"
        android:fontFamily="@font/khand_bold"
        app:layout_constraintTop_toBottomOf="@id/frameHeaderSobreOApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/containerdescSobreOApp"
        android:layout_width="380dp"
        android:layout_height="200dp"
        android:background="@drawable/btn6"
        app:layout_constraintTop_toBottomOf="@id/titleSobreOApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="300dp"
        />


    <TextView
        android:id="@+id/descSobreOApp"
        android:layout_width="370dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="@id/containerdescSobreOApp"
        app:layout_constraintStart_toStartOf="@id/containerdescSobreOApp"
        app:layout_constraintEnd_toEndOf="@id/containerdescSobreOApp"
        app:layout_constraintTop_toTopOf="@id/containerdescSobreOApp"
        android:text="@string/descSobreoApp"
        android:fontFamily="@font/khand_medium"
        android:gravity="center"
        android:textSize="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>