<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.listexercicios.ExercicioDetailedActivity">

    <!-- Header $ Logo -->

    <View
        android:id="@+id/frameHeaderExercicioDetailed"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/btn1" />

    <TextView
        android:id="@+id/logoFITECH_ExercicioDetailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/khand_bold"
        android:text="@string/app_name"
        android:textSize="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_1"
        android:layout_width="68dp"
        android:layout_height="2dp"
        android:layout_marginLeft="-70dp"
        android:layout_marginTop="-18dp"
        android:background="@drawable/line_1"
        app:layout_constraintStart_toEndOf="@id/logoFITECH_ExercicioDetailed"
        app:layout_constraintTop_toBottomOf="@+id/logoFITECH_ExercicioDetailed" />

    <View
        android:id="@+id/iconButtonVoltarTelaExercicioDetailed"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/backwards_arrow"
        app:layout_constraintStart_toStartOf="@id/frameHeaderExercicioDetailed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/frameHeaderExercicioDetailed"
        android:layout_marginLeft="10dp"
        />

    <!-- Titulo -->

    <TextView
        android:id="@+id/titleExercicioDetailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomeExercicio"
        android:textSize="36dp"
        android:fontFamily="@font/khand_bold"
        app:layout_constraintTop_toBottomOf="@id/frameHeaderExercicioDetailed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        />

    <!-- Frame do Video -->

    <VideoView
        android:id="@+id/videoViewExercicio"
        android:layout_width="350dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/titleExercicioDetailed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Descrição do exercicio -->

    <TextView
        android:id="@+id/descricaoExercicioDetailed"
        android:layout_width="350dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/videoViewExercicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/descricaoExercicio"
        android:fontFamily="@font/khand_medium"
        android:textSize="14dp"
        />

    <!-- Footer -->

    <View
        android:id="@+id/frameFooterExercicioDetailed"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/btn1" />

</androidx.constraintlayout.widget.ConstraintLayout>